# Booking

./: CMakeLists.txt  Catalogue.rep  user.rep
Client/: CMakeLists.txt  cartproductpreview.cpp  cartproductpreview.h  cartproductpreview.ui  cartwidget.cpp  cartwidget.h  cartwidget.ui  catalogue.cpp  catalogue.h  cataloguewidget.cpp  cataloguewidget.h  cataloguewidget.ui  client.cpp  client.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  productpreviewwidget.cpp  productpreviewwidget.h  productpreviewwidget.ui  userprofilewidget.cpp  userprofilewidget.h  userprofilewidget.ui
Server/: CMakeLists.txt  cart.cpp  cart.h  catalogue.cpp  catalogue.h  main.cpp  notifications.cpp  notifications.h  orderhistory.cpp  orderhistory.h  server.cpp  server.h  user.cpp  user.h  usermanager.cpp  usermanager.h  userprofile.cpp  userprofile.h
